# zellij-discord-presence

./: .gitignore  Makefile  README.md  pyproject.toml  skills-lock.json
scripts/: presence-daemon.sh  run-now.sh  run-wsl-discord.sh  test-all.sh
src/zellij_presence/: __init__.py  __main__.py  cli.py  config.py  models.py  normalizer.py  sanitizer.py  service.py
src/zellij_presence/collectors/: __init__.py  base.py  cli.py  plugin.py
src/zellij_presence/publishers/: __init__.py  base.py  discord.py  file.py  http.py
tests/: test_collectors_integration.py  test_config.py  test_discord_publisher.py  test_json_publisher.py  test_sanitizer.py  test_service.py
tests/fixtures/: plugin_snapshot.json  zellij_dump_layout.kdl  zellij_list_sessions.txt  zellij_query_tab_names.txt
