[project]
name = "zellij-presence"
version = "0.1.0"
description = "Privacy-first Discord-like presence pipeline for Zellij."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Zellij Presence Contributors" }]
dependencies = []

[project.scripts]
zellij-presence = "zellij_presence.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
